# auto-oiltrader

./: .env.example  .gitignore  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
agents/: __init__.py  analysis_agent.py  critic.py  evaluator.py  narrator.py  news_classifier.py  observer.py  runtime.py  trade_agent.py
cli/: tradectl.py
config/: news_sources.yaml  patterns.yaml  settings.toml  strategies.yaml
core/: __init__.py  combos.py  contracts.py  costs.py  db.py  dte_policy.py  pricing.py  risk.py  rolling_window.py  sizing.py  snapshot.py  strategy_loader.py  summarizer.py  timefmt.py  verticals.py
daemons/: __init__.py  learning_loop.py  main.py  news_collector.py  position_manager.py  reconciler.py  stream_daemon.py  summarizer.py  trader_daemon.py
db/: schema.sql  seed.sql
docs/: architecture.md  install.md  runbook.md  safety.md  strategies.md
interfaces/: __init__.py  api.py  mcp_server.py  notifier.py
services/: README.md  com.oiltrader.stream.plist  trader-api.service  trader-daemon.service  trader-dashboard.service  trader-news.service  trader-positions.service  trader-stream.service
skills/: analyze_smile.md  analyze_trade.md  assess_news.md  build_combo.md  classify_news_item.md  narrate_summary.md  pattern_match.md  pre_trade_check.md  propose_strategy_variant.md  weekly_review.md
strategies/: __init__.py  base.py  bear_call_credit.py  bear_put_debit.py  bull_call_debit.py  bull_put_credit.py  butterfly_pin.py  eia_wednesday.py  iron_condor_range.py  long_strangle_event.py  vol_crush_post_event.py
tests/: test_combos.py  test_draft_flow.py  test_dte_policy.py  test_narrator.py  test_paper_flow.py  test_pricing.py  test_risk.py  test_rolling_window.py  test_sizing.py  test_strategies.py  (+4 more)
(+14 files in other folders)
